# Londoolink-AI

./: .gitignore  DEPLOYMENT_INSTRUCTIONS.md  HEROKU_DEPLOYMENT.md  HEROKU_QUICK_START.md  README.md  TECHNICAL_DOCUMENTATION.md  deploy_backend_to_heroku.sh  test-api-connection.js  vercel.json
.github/workflows/: deploy-docs.yml
app-frontend/: .env.example  .env.local  .gitignore  eslint.config.mjs  netlify.toml  package-lock.json  package.json
app-frontend/.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
app-frontend/app/: globals.css  layout.tsx  page.tsx
app-frontend/lib/: api.ts  (+1 more)
backend/: .env.example  .vercelignore  DEPLOYMENT_FIXES.md  Dockerfile  FIX_LOGIN_ISSUE.md  Procfile  README.md  WORKFLOW_DIAGRAMS.md  backend_log.txt  backend_log_2.txt  backend_log_final.txt  deploy_heroku.sh  docker-compose.yml  heroku.yml  init_db.py  londoolink.db  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  reset_password.py  startup.sh  test_login.py  vercel.json
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: agent.py  audit.py  auth.py  consent.py  demo.py  health.py  ingest.py  integrations.py  memory.py  profile.py  security.py  settings.py  step_up.py  threads.py  two_factor.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  backboard_assistant.py  backboard_thread.py  connected_service.py  consent.py  user.py
backend/app/schemas/: integrations.py  message.py  profile.py  two_factor.py  user.py
backend/app/security/: __init__.py  encryption.py  jwt.py  password.py  utils.py  validator.py
backend/app/services/: audit_log.py  coordinator.py  google_tools.py  rag_pipeline.py  sms_service.py  step_up.py  tools.py
backend/app/services/agents/: __init__.py  calendar_agent.py  email_agent.py  notion_agent.py  priority_agent.py  social_agent.py  video_agent.py
backend/app/services/backboard/: __init__.py  backboard_service.py
backend/app/services/langgraph/: coordinator.py  nodes.py  routing.py  state.py  workflow.py
backend/app/services/rag/: __init__.py  chunker.py  embeddings.py  pipeline.py  vector_store.py
backend/app/services/token_vault/: __init__.py  client.py  exceptions.py  factory.py  mock_client.py
backend/app/utils/: text_formatter.py
backend/chroma_db/: chroma.sqlite3
backend/chroma_db_backup/: chroma.sqlite3
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_create_users_table.py  9c47da0bc964_add_2fa_fields_to_user_model.py  a1b2c3d4e5f6_add_audit_logs_table.py  b2c3d4e5f6a7_add_vault_columns_to_connected_services.py  c3d4e5f6a7b8_add_auth0_sub_to_users.py  d4e5f6a7b8c9_add_backboard_assistants_table.py  e5f6a7b8c9d0_add_backboard_threads_table.py  fa98466add87_add_phone_number_consents_and_connected_.py
backend/scripts/: init_production_db.py  seed_data.py
backend/tests/: conftest.py  manual_test_backboard_endpoints.py  test_agents.py  test_api.py  test_backboard_config.py  test_backboard_service.py  test_backboard_startup.py  test_rag.py  test_rag_backboard_routing.py  test_rag_graceful_degradation.py  test_security_minimal.py  test_smoke.py  test_two_factor.py
backend/tests/api/: test_health.py
docs/: BACKBOARD_API_ISSUE.md  BACKBOARD_INTEGRATION_COMPLETE.md  BACKBOARD_INTEGRATION_SUMMARY.md  BACKBOARD_READY.md  BACKBOARD_TESTING_GUIDE.md  HEROKU_DEPLOYMENT.md  HEROKU_QUICK_START.md  README.md  api.html  architecture.html  auth0-architecture-diagram.html  deployment.html  index.html  security.html  setup.html
frontend/: README.md  package-lock.json  package.json
test_db/: chroma.sqlite3
(+72 files in other folders)
