[project]
name = "londoolink-ai-backend"
version = "0.1.0"
description = "An intelligent agent that securely tracks and links your digital life, ensuring you never miss what truly matters."
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI and web framework
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    # Database and ORM
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    # Security and authentication
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "cryptography",
    "python-multipart", # For form data
    # AI and ML
    "langchain",
    "langchain-openai",
    "openai",
    "chromadb",
    # "sentence-transformers",
    # Utilities
    "python-dotenv",
    "httpx", # For making HTTP requests
    "python-dateutil",
    # Development and testing
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "email-validator",
    "langchain-groq",
    "langchain-ollama",
    "pyjwt",
    "pwdlib[argon2]>=0.3.0",
    "langgraph",
    "langchain-google-genai",
    "google-genai",
    "pillow",
    "google-auth-oauthlib",
    "google-api-python-client",
    "google-auth",
    "requests",
    "pyotp",
    "qrcode",
    "psutil",
    "africastalking",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]
